Editor Block Integeration

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10019,4 +10019,7 @@ footer .nav-link {
 .icon-handshake:before {
   content: '';
 }
+.trumbowyg-editor ul li{
+  list-style: disc;
+}
 /* '' */
